--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://flnate3.gitlab.io/personal-website-blog/ 
 languageCode: en-us
 title: Moles Blog
 theme: hugo-profile
