Revert "Update file config.yaml"
This reverts commit 7b55212082a98107ff967742e95d8ed5a65a3123.

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://flnate3.gitlab.io/personal-website-blog"
+baseURL: "https://flnate3.gitlab.io"
 languageCode: "en-us"
 title: "Moles Profile"
 theme: hugo-profile
