--- a/config.yaml
+++ b/config.yaml
@@ -135,9 +135,9 @@ params:
     button:
       enable: true
       name: "Resume"
-      url: "#"
-      download: true
-      newPage: false
+      url: "/images/Nathan-Moles.pdf"
+      download: false
+      newPage: true
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-github
@@ -154,7 +154,7 @@ params:
     title: "About Me"
     image: "/images/me.png"
     content: |-
-     I am a Christian who is a student at [Cedarville University](https://www.cedarville.edu/) who is currently working on getting a degree in IT management. I am also a big nerd in all things gaming, movies, and tv, who is also trying to learn as much about technolgy as possible before going into the workplace \n\nI am planning on using this website to blog and showcase my knowledge of technolodgy or what I am learning in the techniclodgical space. And also write about anything else I find fun or interesting whether it is Christian topics, gaming, or movies.\n\nI will also sometimes use .
+     I am a Christian who is a student at [Cedarville University](https://www.cedarville.edu/) who is currently working on getting a degree in IT management. I am also a big nerd in all things gaming, movies, and tv, who is also trying to learn as much about technolgy as possible before going into the workplace I am planning on using this website to blog and showcase my knowledge of technolodgy or what I am learning in the techniclodgical space. And also write about anything else I find fun or interesting whether it is Christian topics, gaming, or movies.
     skills:
       enable: false
       title: "Here are a few technologies I've been working with recently:"
